# Infoculus

./: .gitignore  README.md  app.py  pyproject.toml  query_handler.py  requirements.txt
agent/: calculator_agent.py  newscaster_agent.py  orchestrator.py
config/: config.py
src/news/: __init__.py
utils/: query_classifier.py  web_search.py
